# Python4Dev

./: .gitignore  pyproject.toml
HW/: PPR501_HW1.ipynb
day-1/: bag_of_words.py  s1_py.py  socket_udp_client.py  socket_udp_server.py  tcp_file_client.py  tcp_file_server.py
day-2/: README.md  REST_API.py  S4_Mini_Project.py  factorial_app.py
day-3/: S8_EX2_background_replace.ipynb  S8_openCV.ipynb  S9_BTHD_Pandas.ipynb  ex_on-going.ipynb  matrix_prac.ipynb  test.py
day-4/: bai_tap_pandas_vn_exes.ipynb  uber_raw_displot_analysis.ipynb  world_population_choropleth.html  world_population_choropleth_folium.ipynb
day-5/: S11_BTTH.ipynb  finetune.ipynb  img_detect.ipynb  iris.ipynb  x.ipynb  xyz.ipynb
day-6/: HW3.py  app.py  backend.py  backend_backup.py
runs/detect/train/: args.yaml
