[project]
name = "python4dev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "folium>=0.20.0",
    "ipykernel",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "ultralytics>=8.4.67",
    "xgboost>=3.2.0",
]
